// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hash correctly 1`] = `
<a
  className="normal"
  href="#"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  To google
</a>
`;

exports[`renders link correctly 1`] = `
<a
  className="normal"
  href="www.google.es"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  To google
</a>
`;

exports[`renders link correctly 2`] = `
<a
  className="hovered"
  href="www.google.es"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  To google
</a>
`;

exports[`renders link correctly 3`] = `
<a
  className="normal"
  href="www.google.es"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  To google
</a>
`;
